# QYates

./: CMakeLists.txt  LICENSE  QYates.kdev4  README.md
.kdev4/: QYates.kdev4
examples/: Mometasone_furoate.txt  Norgestimate.txt  Readme.txt  Yates_effect_test.txt  exampleBox11.3Surf.txt
src/: CMakeLists.txt  QYates.cpp  QYates.h  QYates.ui  QYatesLogo.  QYatesLogo.xcf  SurfacePlot.cpp  SurfacePlot.h  algebra.c  algebra.h  app.xcf  icons.qrc  icons.qrc~  main.cpp  testmatrix.c  testmatrix.c~
src/qwspectrogramplot/: Makefile  moc_plot.cpp  plot.cpp  spectrogram  spectrogram.pro
